<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="amazing_service">Amazing (20%)</string>
    <string name="good_service">Good (18%)</string>
    <string name="okay_service">Okay (15%)</string>
    <string name="round_up_tip_question">Round up tip?</string>
    <string name="calculate_text">Calculate</string>
    <string name="tip_amount_text">Tip Amount : %s</string>
    <string name="hint_label">Cost of Service</string>
</resources>